# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: Sanitizers.cmake
include/cat/sounds/: meow.hpp
src/: CMakeLists.txt  main.test.cpp
src/cat/: CMakeLists.txt
src/cat/sounds/: CMakeLists.txt  meow.cpp  meow.test.cpp
tests/: CMakeLists.txt  test1.cpp
